[add]用户查询和提交列表 [fix]修正一些bugs
