# 15-GolangProject/gin-gorm-practice/models/category_basic.go
@@ -6,9 +6,9 @@ import (
 
 type CategoryBasic struct {
 	gorm.Model
-	Identity string `gorm:"column:identities;type:varchar(36);" json:"identities"` //唯一标识
-	Name     string `gorm:"column:name;type:varchar(100);" json:"name"`            //分类名称
-	ParentId int    `gorm:"column:parent_id;type:int;" json:"parent_id"`           //父级ID
+	Identity string `gorm:"column:identities;type:varchar(36);" json:"identity"` //唯一标识
+	Name     string `gorm:"column:name;type:varchar(100);" json:"name"`          //分类名称
+	ParentId int    `gorm:"column:parent_id;type:int;" json:"parent_id"`         //父级ID
 }
 
 func (this *CategoryBasic) TableName() string {
