# 15-GolangProject/gin-gorm-practice/models/problem_basic.go
@@ -6,12 +6,12 @@ import (
 
 type ProblemBasic struct {
 	gorm.Model
-	Identity          string             `gorm:"column:identities;type:varchar(36);" json:"identities"` //问题表的唯一标识
-	ProblemCategories []*ProblemCategory `gorm:"foreignKey:problem_id;references:id"`                   //关联问题分类表, 关联多个分类id
-	Title             string             `gorm:"column:title;type:varchar(255);" json:"title"`          //问题标题
-	Content           string             `gorm:"column:content;type:text;" json:"content"`              //问题正文
-	Max_Men           int                `gorm:"column:max_men;type:int(11);" json:"max_men"`           //最大运行内存
-	Max_runtime       int                `gorm:"column:max_runtime;type:int(11);" json:"max_runtime"`   //最大运行时间
+	Identity          string             `gorm:"column:identities;type:varchar(36);" json:"identity"` //问题表的唯一标识
+	ProblemCategories []*ProblemCategory `gorm:"foreignKey:problem_id;references:id"`                 //关联问题分类表, 关联多个分类id
+	Title             string             `gorm:"column:title;type:varchar(255);" json:"title"`        //问题标题
+	Content           string             `gorm:"column:content;type:text;" json:"content"`            //问题正文
+	Max_Men           int                `gorm:"column:max_men;type:int(11);" json:"max_men"`         //最大运行内存
+	Max_runtime       int                `gorm:"column:max_runtime;type:int(11);" json:"max_runtime"` //最大运行时间
 }
 
 func (this *ProblemBasic) TableName() string {
