# 15-GolangProject/gin-gorm-practice/models/user_basic.go
@@ -4,7 +4,7 @@ import "gorm.io/gorm"
 
 type UserBasic struct {
 	gorm.Model
-	Identity string `gorm:"column:identity;type:varchar(36);" json:"identities"` //唯一标识
+	Identity string `gorm:"column:identities;type:varchar(36);" json:"identity"` //唯一标识
 	Name     string `gorm:"column:name;type:varchar(100)" json:"name"`           //用户名
 	Password string `gorm:"column:password;type:varchar(32)" json:"password"`    //密码
 	Phone    string `gorm:"column:phone;type:varchar(20)" json:"phone"`          //手机号
